// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`composed config snapshots > snapshots Next.js app router overrides 1`] = `
{
  "names": [
    "eslint-config-basic/default-ignores",
    "eslint-config-basic/commonjs",
    "eslint-config/core-plugins",
    "@eslint/js/recommended",
    "@eslint/js/recommended/slots",
    "node/flat/recommended-module",
    "node/flat/recommended-module/slots",
    "promise/flat/recommended",
    "promise/flat/recommended/slots",
    "stylistic/recommended",
    "stylistic/recommended/slots",
    "eslint-config/plugins-rules",
    "eslint-config/plugins-rules/slots",
    "eslint-config/custom-rules",
    "eslint-config/custom-rules/slots",
    "eslint-config-react/recommended",
    "eslint-config-react/custom",
    "eslint-config-next/plugin",
    "eslint-config-next/custom",
    "eslint-config-next/ignores",
    "eslint-config-next/app-router-overrides",
  ],
  "rules": {
    "@next/next/no-html-link-for-pages": "off",
    "@typescript-eslint/no-explicit-any": undefined,
    "no-console": undefined,
    "prettier/prettier": undefined,
    "simple-import-sort/imports": [
      "warn",
      {
        "groups": [
          [
            "^react",
          ],
          [
            "^(next)(/.*|$)?",
          ],
          [
            "^(components|@/components|@components)(/.*|$)",
          ],
          [
            "^(ui|@/ui|@ui)(/.*|$)",
          ],
          [
            "^(atoms|@/atoms|@atoms)(/.*|$)",
          ],
          [
            "^(molecules|@/molecules|@molecules)(/.*|$)",
          ],
          [
            "^(organisms|@/organisms|@organisms)(/.*|$)",
          ],
          [
            "^(templates|@/templates|@templates)(/.*|$)",
          ],
          [
            "^(pages|@/pages|@pages)(/.*|$)",
          ],
          [
            "^(store|@/store|@store)(/.*|$)",
          ],
          [
            "^(api|@/api|@api)(/.*|$)",
          ],
          [
            "^(contexts|@/contexts|@contexts)(/.*|$)",
          ],
          [
            "^(hooks|@/hooks|@hooks)(/.*|$)",
          ],
          [
            "^(lib|@/lib|@lib)(/.*|$)",
          ],
          [
            "^(services|@/services|@services)(/.*|$)",
          ],
          [
            "^(models|@/models|@models)(/.*|$)",
          ],
          [
            "^(utils|@/utils|@utils)(/.*|$)",
          ],
          [
            "^(ws|@/ws|@ws)(/.*|$)",
          ],
          [
            "^\\w",
          ],
          [
            "^\\u0000",
          ],
          [
            "^\\./(?=.*/)(?!/?$)",
            "^\\.(?!/?$)",
            "^\\./?$",
          ],
          [
            "^\\.\\.(?!/?$)",
            "^\\.\\./?$",
          ],
          [
            "^.+\\.?(css|scss)$",
          ],
        ],
      },
    ],
  },
}
`;

exports[`composed config snapshots > snapshots React app integrations 1`] = `
{
  "names": [
    "eslint-config-basic/default-ignores",
    "eslint-config-basic/tsconfig-root-dir",
    "eslint-config-basic/commonjs",
    "eslint-config/core-plugins",
    "@eslint/js/recommended",
    "@eslint/js/recommended/slots",
    "node/flat/recommended-module",
    "node/flat/recommended-module/slots",
    "promise/flat/recommended",
    "promise/flat/recommended/slots",
    "stylistic/recommended",
    "stylistic/recommended/slots",
    "eslint-config/plugins-rules",
    "eslint-config/plugins-rules/slots",
    "eslint-config/custom-rules",
    "eslint-config/custom-rules/slots",
    "eslint-config-react/recommended",
    "eslint-config-react/custom",
    "eslint-config-typescript/setup",
    "typescript-eslint/base",
    "typescript-eslint/eslint-recommended",
    "typescript-eslint/eslint-recommended/rules-only",
    "typescript-eslint/strict",
    "typescript-eslint/strict/rules-only",
    "typescript-eslint/base",
    "typescript-eslint/eslint-recommended",
    "typescript-eslint/eslint-recommended/rules-only",
    "typescript-eslint/stylistic",
    "typescript-eslint/stylistic/rules-only",
    "eslint-config-typescript/parser-setup",
    "eslint-config-typescript/standard-rules",
    "eslint-config-basic/import-boundaries",
    "santi020k/tailwind/recommended",
    "integrations/vitest",
    "mdx/flat",
    "mdx/flat-code-blocks",
    "eslint-config-mdx/disable-type-checked",
    "eslint-config/prettier",
  ],
  "rules": {
    "@next/next/no-html-link-for-pages": undefined,
    "@typescript-eslint/no-explicit-any": "off",
    "no-console": undefined,
    "prettier/prettier": undefined,
    "simple-import-sort/imports": [
      "warn",
      {
        "groups": [
          [
            "^react",
          ],
          [
            "^(components|@/components|@components)(/.*|$)",
          ],
          [
            "^(ui|@/ui|@ui)(/.*|$)",
          ],
          [
            "^(atoms|@/atoms|@atoms)(/.*|$)",
          ],
          [
            "^(molecules|@/molecules|@molecules)(/.*|$)",
          ],
          [
            "^(organisms|@/organisms|@organisms)(/.*|$)",
          ],
          [
            "^(templates|@/templates|@templates)(/.*|$)",
          ],
          [
            "^(pages|@/pages|@pages)(/.*|$)",
          ],
          [
            "^(store|@/store|@store)(/.*|$)",
          ],
          [
            "^(api|@/api|@api)(/.*|$)",
          ],
          [
            "^(contexts|@/contexts|@contexts)(/.*|$)",
          ],
          [
            "^(hooks|@/hooks|@hooks)(/.*|$)",
          ],
          [
            "^(lib|@/lib|@lib)(/.*|$)",
          ],
          [
            "^(services|@/services|@services)(/.*|$)",
          ],
          [
            "^(models|@/models|@models)(/.*|$)",
          ],
          [
            "^(utils|@/utils|@utils)(/.*|$)",
          ],
          [
            "^(ws|@/ws|@ws)(/.*|$)",
          ],
          [
            "^\\w",
          ],
          [
            "^\\u0000",
          ],
          [
            "^\\./(?=.*/)(?!/?$)",
            "^\\.(?!/?$)",
            "^\\./?$",
          ],
          [
            "^\\.\\.(?!/?$)",
            "^\\.\\./?$",
          ],
          [
            "^.+\\.?(css|scss)$",
          ],
        ],
      },
    ],
  },
}
`;

exports[`composed config snapshots > snapshots TypeScript syntax mode with Prettier last 1`] = `
{
  "names": [
    "eslint-config-basic/default-ignores",
    "eslint-config-basic/tsconfig-root-dir",
    "eslint-config-basic/commonjs",
    "eslint-config/core-plugins",
    "@eslint/js/recommended",
    "@eslint/js/recommended/slots",
    "node/flat/recommended-module",
    "node/flat/recommended-module/slots",
    "promise/flat/recommended",
    "promise/flat/recommended/slots",
    "stylistic/recommended",
    "stylistic/recommended/slots",
    "eslint-config/plugins-rules",
    "eslint-config/plugins-rules/slots",
    "eslint-config/custom-rules",
    "eslint-config/custom-rules/slots",
    "eslint-config-typescript/setup",
    "typescript-eslint/base",
    "typescript-eslint/eslint-recommended",
    "typescript-eslint/eslint-recommended/rules-only",
    "typescript-eslint/strict",
    "typescript-eslint/strict/rules-only",
    "typescript-eslint/base",
    "typescript-eslint/eslint-recommended",
    "typescript-eslint/eslint-recommended/rules-only",
    "typescript-eslint/stylistic",
    "typescript-eslint/stylistic/rules-only",
    "eslint-config-typescript/parser-setup",
    "eslint-config-typescript/standard-rules",
    "eslint-config/prettier",
  ],
  "rules": {
    "@next/next/no-html-link-for-pages": undefined,
    "@typescript-eslint/no-explicit-any": "warn",
    "no-console": undefined,
    "prettier/prettier": undefined,
    "simple-import-sort/imports": [
      "warn",
      {
        "groups": [
          [
            "^(components|@/components|@components)(/.*|$)",
          ],
          [
            "^(ui|@/ui|@ui)(/.*|$)",
          ],
          [
            "^(atoms|@/atoms|@atoms)(/.*|$)",
          ],
          [
            "^(molecules|@/molecules|@molecules)(/.*|$)",
          ],
          [
            "^(organisms|@/organisms|@organisms)(/.*|$)",
          ],
          [
            "^(templates|@/templates|@templates)(/.*|$)",
          ],
          [
            "^(pages|@/pages|@pages)(/.*|$)",
          ],
          [
            "^(store|@/store|@store)(/.*|$)",
          ],
          [
            "^(api|@/api|@api)(/.*|$)",
          ],
          [
            "^(contexts|@/contexts|@contexts)(/.*|$)",
          ],
          [
            "^(hooks|@/hooks|@hooks)(/.*|$)",
          ],
          [
            "^(lib|@/lib|@lib)(/.*|$)",
          ],
          [
            "^(services|@/services|@services)(/.*|$)",
          ],
          [
            "^(models|@/models|@models)(/.*|$)",
          ],
          [
            "^(utils|@/utils|@utils)(/.*|$)",
          ],
          [
            "^(ws|@/ws|@ws)(/.*|$)",
          ],
          [
            "^\\w",
          ],
          [
            "^\\u0000",
          ],
          [
            "^\\./(?=.*/)(?!/?$)",
            "^\\.(?!/?$)",
            "^\\./?$",
          ],
          [
            "^\\.\\.(?!/?$)",
            "^\\.\\./?$",
          ],
          [
            "^.+\\.?(css|scss)$",
          ],
        ],
      },
    ],
  },
}
`;

exports[`composed config snapshots > snapshots monorepo project scoping 1`] = `
{
  "names": [
    "eslint-config-basic/default-ignores",
    "eslint-config-basic/tsconfig-root-dir",
    "eslint-config-basic/commonjs",
    "eslint-config/core-plugins",
    "@eslint/js/recommended",
    "@eslint/js/recommended/slots",
    "node/flat/recommended-module",
    "node/flat/recommended-module/slots",
    "promise/flat/recommended",
    "promise/flat/recommended/slots",
    "stylistic/recommended",
    "stylistic/recommended/slots",
    "eslint-config/plugins-rules",
    "eslint-config/plugins-rules/slots",
    "eslint-config/custom-rules",
    "eslint-config/custom-rules/slots",
    "eslint-config-typescript/setup",
    "typescript-eslint/base",
    "typescript-eslint/eslint-recommended",
    "typescript-eslint/eslint-recommended/rules-only",
    "typescript-eslint/strict-type-checked",
    "typescript-eslint/strict-type-checked/rules-only",
    "typescript-eslint/base",
    "typescript-eslint/eslint-recommended",
    "typescript-eslint/eslint-recommended/rules-only",
    "typescript-eslint/stylistic-type-checked",
    "typescript-eslint/stylistic-type-checked/rules-only",
    "eslint-config-typescript/parser-setup",
    "eslint-config-typescript/standard-rules",
    "eslint-config-typescript/type-checked-rules",
    "eslint-config/best-practices",
    "eslint-config/prettier",
    "eslint-config-basic/default-ignores",
    "eslint-config-basic/tsconfig-root-dir",
    "eslint-config-basic/commonjs",
    "eslint-config/core-plugins",
    "@eslint/js/recommended",
    "@eslint/js/recommended/slots",
    "node/flat/recommended-module",
    "node/flat/recommended-module/slots",
    "promise/flat/recommended",
    "promise/flat/recommended/slots",
    "stylistic/recommended",
    "stylistic/recommended/slots",
    "eslint-config/plugins-rules",
    "eslint-config/plugins-rules/slots",
    "eslint-config/custom-rules",
    "eslint-config/custom-rules/slots",
    "eslint-config-typescript/setup",
    "typescript-eslint/base",
    "typescript-eslint/eslint-recommended",
    "typescript-eslint/eslint-recommended/rules-only",
    "typescript-eslint/strict-type-checked",
    "typescript-eslint/strict-type-checked/rules-only",
    "typescript-eslint/base",
    "typescript-eslint/eslint-recommended",
    "typescript-eslint/eslint-recommended/rules-only",
    "typescript-eslint/stylistic-type-checked",
    "typescript-eslint/stylistic-type-checked/rules-only",
    "eslint-config-typescript/parser-setup",
    "eslint-config-typescript/standard-rules",
    "eslint-config-typescript/type-checked-rules",
    "eslint-config/best-practices",
    "eslint-config/prettier",
    "eslint-config-basic/default-ignores",
    "eslint-config-basic/tsconfig-root-dir",
    "eslint-config-basic/commonjs",
    "eslint-config/core-plugins",
    "@eslint/js/recommended",
    "@eslint/js/recommended/slots",
    "node/flat/recommended-module",
    "node/flat/recommended-module/slots",
    "promise/flat/recommended",
    "promise/flat/recommended/slots",
    "stylistic/recommended",
    "stylistic/recommended/slots",
    "eslint-config/plugins-rules",
    "eslint-config/plugins-rules/slots",
    "eslint-config/custom-rules",
    "eslint-config/custom-rules/slots",
    "eslint-config-react/recommended",
    "eslint-config-react/custom",
    "eslint-config-typescript/setup",
    "typescript-eslint/base",
    "typescript-eslint/eslint-recommended",
    "typescript-eslint/eslint-recommended/rules-only",
    "typescript-eslint/strict-type-checked",
    "typescript-eslint/strict-type-checked/rules-only",
    "typescript-eslint/base",
    "typescript-eslint/eslint-recommended",
    "typescript-eslint/eslint-recommended/rules-only",
    "typescript-eslint/stylistic-type-checked",
    "typescript-eslint/stylistic-type-checked/rules-only",
    "eslint-config-typescript/parser-setup",
    "eslint-config-typescript/standard-rules",
    "eslint-config-typescript/type-checked-rules",
    "integrations/vitest",
    "eslint-config/prettier",
  ],
  "rules": {
    "@next/next/no-html-link-for-pages": undefined,
    "@typescript-eslint/no-explicit-any": "off",
    "no-console": "warn",
    "prettier/prettier": undefined,
    "simple-import-sort/imports": [
      "warn",
      {
        "groups": [
          [
            "^react",
          ],
          [
            "^(components|@/components|@components)(/.*|$)",
          ],
          [
            "^(ui|@/ui|@ui)(/.*|$)",
          ],
          [
            "^(atoms|@/atoms|@atoms)(/.*|$)",
          ],
          [
            "^(molecules|@/molecules|@molecules)(/.*|$)",
          ],
          [
            "^(organisms|@/organisms|@organisms)(/.*|$)",
          ],
          [
            "^(templates|@/templates|@templates)(/.*|$)",
          ],
          [
            "^(pages|@/pages|@pages)(/.*|$)",
          ],
          [
            "^(store|@/store|@store)(/.*|$)",
          ],
          [
            "^(api|@/api|@api)(/.*|$)",
          ],
          [
            "^(contexts|@/contexts|@contexts)(/.*|$)",
          ],
          [
            "^(hooks|@/hooks|@hooks)(/.*|$)",
          ],
          [
            "^(lib|@/lib|@lib)(/.*|$)",
          ],
          [
            "^(services|@/services|@services)(/.*|$)",
          ],
          [
            "^(models|@/models|@models)(/.*|$)",
          ],
          [
            "^(utils|@/utils|@utils)(/.*|$)",
          ],
          [
            "^(ws|@/ws|@ws)(/.*|$)",
          ],
          [
            "^\\w",
          ],
          [
            "^\\u0000",
          ],
          [
            "^\\./(?=.*/)(?!/?$)",
            "^\\.(?!/?$)",
            "^\\./?$",
          ],
          [
            "^\\.\\.(?!/?$)",
            "^\\.\\./?$",
          ],
          [
            "^.+\\.?(css|scss)$",
          ],
        ],
      },
    ],
  },
}
`;

exports[`composed config snapshots > snapshots the default no-detection JavaScript config 1`] = `
{
  "names": [
    "eslint-config-basic/default-ignores",
    "eslint-config-basic/commonjs",
    "eslint-config/core-plugins",
    "@eslint/js/recommended",
    "@eslint/js/recommended/slots",
    "node/flat/recommended-module",
    "node/flat/recommended-module/slots",
    "promise/flat/recommended",
    "promise/flat/recommended/slots",
    "stylistic/recommended",
    "stylistic/recommended/slots",
    "eslint-config/plugins-rules",
    "eslint-config/plugins-rules/slots",
    "eslint-config/custom-rules",
    "eslint-config/custom-rules/slots",
  ],
  "rules": {
    "@next/next/no-html-link-for-pages": undefined,
    "@typescript-eslint/no-explicit-any": undefined,
    "no-console": undefined,
    "prettier/prettier": undefined,
    "simple-import-sort/imports": [
      "warn",
      {
        "groups": [
          [
            "^(components|@/components|@components)(/.*|$)",
          ],
          [
            "^(ui|@/ui|@ui)(/.*|$)",
          ],
          [
            "^(atoms|@/atoms|@atoms)(/.*|$)",
          ],
          [
            "^(molecules|@/molecules|@molecules)(/.*|$)",
          ],
          [
            "^(organisms|@/organisms|@organisms)(/.*|$)",
          ],
          [
            "^(templates|@/templates|@templates)(/.*|$)",
          ],
          [
            "^(pages|@/pages|@pages)(/.*|$)",
          ],
          [
            "^(store|@/store|@store)(/.*|$)",
          ],
          [
            "^(api|@/api|@api)(/.*|$)",
          ],
          [
            "^(contexts|@/contexts|@contexts)(/.*|$)",
          ],
          [
            "^(hooks|@/hooks|@hooks)(/.*|$)",
          ],
          [
            "^(lib|@/lib|@lib)(/.*|$)",
          ],
          [
            "^(services|@/services|@services)(/.*|$)",
          ],
          [
            "^(models|@/models|@models)(/.*|$)",
          ],
          [
            "^(utils|@/utils|@utils)(/.*|$)",
          ],
          [
            "^(ws|@/ws|@ws)(/.*|$)",
          ],
          [
            "^\\w",
          ],
          [
            "^\\u0000",
          ],
          [
            "^\\./(?=.*/)(?!/?$)",
            "^\\.(?!/?$)",
            "^\\./?$",
          ],
          [
            "^\\.\\.(?!/?$)",
            "^\\.\\./?$",
          ],
          [
            "^.+\\.?(css|scss)$",
          ],
        ],
      },
    ],
  },
}
`;
